Moved to Java 21 because I said so